# voxel-planet

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
assets/shaders/: TerrainGenerateMipmaps.comp  simple.frag  simple.vert
assets/textures/: cobblestone.pxc  cobblestone.pxc1  grass_test.pxc  grass_test.pxc1
shaders/: simple.frag
src/: main.cpp  vulkan_dispatcher.cpp
src/client/: CMakeLists.txt  ClientModule.cpp  ClientModule.h
src/core/: Application.h  CMakeLists.txt  CoreModule.cpp  CoreModule.h  GameState.h  events.h  main_components.h
src/core/log/: Logger.cpp  Logger.h
src/core/resource/: AssetRegistry.cpp  AssetRegistry.h  ResourceSystem.cpp  ResourceSystem.h  asset_id.h  resource_type.h
src/core/resource/loaders/: ImageLoader.cpp  ImageLoader.h  ResourceLoader.h  ShaderLoader.cpp  ShaderLoader.h
src/core/window/: Window.cpp  Window.h
src/core/world/: ChunkManager.cpp  ChunkManager.h  WorldComponents.h  WorldGenerator.cpp  WorldGenerator.h  world_components.h
src/platform/: CMakeLists.txt  PlatformModule.cpp  PlatformModule.h  PlatformState.h
src/platform/inputs/: InputStateManager.cpp  InputStateManager.h  input_state.h
src/platform/window/: Window.cpp
src/renderer/: CMakeLists.txt  Camera3dSystems.cpp  Camera3dSystems.h  Renderer.cpp  Renderer.h  RendererModule.cpp  RendererModule.h  render_types.h  rendering_components.h
src/renderer/debug/: FpsCounter.cpp  FpsCounter.h  IImGuiDebugModule.h  ImGuiDebugModuleManager.cpp  ImGuiDebugModuleManager.h  ImGuiManager.cpp  LogConsole.cpp  LogConsole.h  VoxelBufferVisualizer.cpp  VoxelBufferVisualizer.h  WorldF3Info.cpp  WorldF3Info.h
src/renderer/managers/: ImGuiManager.cpp  ImGuiManager.h
src/renderer/vulkan/: VulkanBackend.cpp  VulkanBackend.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanSwapchain.cpp  VulkanSwapchain.h  vulkan_type.inl
src/renderer/vulkan/shaders/: VulkanTerrainShader.cpp  VulkanTerrainShader.h  shader_helper.cpp  shader_helper.h
src/renderer/world/: RenderingComponents.h  VoxelBuffer.cpp  VoxelBuffer.h  VoxelChunkMesher.cpp  VoxelChunkMesher.h  VoxelTerrainRenderer.cpp  VoxelTerrainRenderer.h  VoxelTextureManager.cpp  VoxelTextureManager.h
